chore: update specification
