# src/types.ts
@@ -101,6 +101,8 @@ export type DataAccountDeletion = components['schemas']['DataAccountDeletion'];
 export type AccountInfo = components['schemas']['AccountInfo'];
 export type DataChangePassword = components['schemas']['DataChangePassword'];
 export type DataChangeEmail = components['schemas']['DataChangeEmail'];
+export type ResponseVerify = components['schemas']['ResponseVerify'];
+export type MFATicket = components['schemas']['MFATicket'];
 export type DataPasswordReset = components['schemas']['DataPasswordReset'];
 export type DataSendPasswordReset = components['schemas']['DataSendPasswordReset'];
 export type ResponseLogin = components['schemas']['ResponseLogin'];
@@ -110,7 +112,6 @@ export type DataLogin = components['schemas']['DataLogin'];
 export type MFAResponse = components['schemas']['MFAResponse'];
 export type SessionInfo = components['schemas']['SessionInfo'];
 export type DataEditSession = components['schemas']['DataEditSession'];
-export type MFATicket = components['schemas']['MFATicket'];
 export type MultiFactorStatus = components['schemas']['MultiFactorStatus'];
 export type ResponseTotpSecret = components['schemas']['ResponseTotpSecret'];
 export type DataHello = components['schemas']['DataHello'];
